--- a/sdk/management/pipelines/fluentJavaMgmt.yml
+++ b/sdk/management/pipelines/fluentJavaMgmt.yml
@@ -8,7 +8,7 @@ pr:
   - master
 
 variables:
-  DefaultOptions: '--settings sdk/management/settings.xml -Dmaven.wagon.http.pool=false'
+  DefaultOptions: '--settings eng/settings.xml -Dmaven.wagon.http.pool=false'
   LoggingOptions: '-Dorg.slf4j.simpleLogger.defaultLogLevel=error -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn'
 
 jobs:
@@ -66,7 +66,7 @@ jobs:
         displayName: 'Run Tests on Java 8'
         inputs:
           mavenPomFile: sdk/management/pom.xml
-          options: '--batch-mode $(DefaultOptions) $(ProfileFlag) -DoutputSkips=true -Dsurefire.rerunFailingTestsCount=3 -Dparallel=classes -DthreadCount=2 -DforkCount=1C'
+          options: '--batch-mode $(DefaultOptions) $(ProfileFlag) -DskipOutput=true -Dsurefire.rerunFailingTestsCount=3 -Dparallel=classes -DthreadCount=2 -DforkCount=1C'
           mavenOptions: '$(LoggingOptions)'
           javaHomeOption: 'JDKVersion'
           jdkVersionOption: $(JavaVersion)
