--- a/eng/mgmt/automation/generation.yml
+++ b/eng/mgmt/automation/generation.yml
@@ -11,12 +11,6 @@ variables:
   NodeVersion: '14.x'
 
 steps:
-- task: CacheBeta@1
-  inputs:
-    key: 'maven | "$(Agent.OS)"'
-    path: $(MAVEN_CACHE_FOLDER)
-  displayName: Cache Maven Local Repo
-
 - bash: |
     sudo apt-get install -y --upgrade python3-pip python3-setuptools
     pip3 install --upgrade wheel
@@ -47,3 +41,4 @@ steps:
     PROwner: Azure-Fluent
     RepoOwner: ChenTanyi
     PRLabels: 'Mgmt - Track 2'
+    SkipCheckingForChanges: true
